# genai-agent-framework

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: fastapi_app.py  streamlit_app.py
src/agent/: core.py  prompt_strategy.py
src/agent/memory/: faiss_memory.py
src/agent/tools/: calculator.py  file_tool.py  web_search.py
tests/: test_core.py  test_memory.py
